# Adv-programming

./: README.md
p1/: CMakeLists.txt  main.cc
p1/src/: array.h  simple_string.cc  simple_string.h
p2/: heat.h  main.cc  sample2D.conf
p2/cpu-VS/: cpu-test.sln
p2/cpu-VS/Debug/: cpu-test.ilk
p2/cpu-VS/cpu-test/: cpu-test.vcxproj  cpu-test.vcxproj.filters  heat.h  heat2Doutput.csv  heat3Doutput-1.csv  main.cc  sample(1).conf  sample2D.conf
p2/cpu-VS/cpu-test/Debug/: vc141.idb
p2/cpu-VS/cpu-test/Debug/cpu-test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cpu-test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
p2/cpu-g++/: heat.h  main.out  sample3D.conf
p2/gpu-VS/: gpu.sln
p2/gpu-VS/gpu/: gpu.vcxproj  kernel.cu
p2/gpu-VS/gpu/x64/Debug/: kernel.cu-255479867.deps
p2/gpu-VS/gpu/x64/Debug/gpu.tlog/: gpu.lastbuildstate  gpu.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
p2/gpu-VS/x64/Debug/: gpu.exp  gpu.ilk  gpu.lib
p2/gpu-cmake/: CMakeLists.txt  Readme.md  heat.cu
p2/gpu-cmake/src/: heat.h
p3/: CMakeLists.txt  MPI_fft2d.cc  kernel.cu
p3/src/: complex.cc
se2/: CMakeLists.txt
se2/new_name/: new_name.out
se2/ref_proj/: heat1Doutput.csv  heat_ref.cc  heat_ref.out  new_name.cc
se2/src/: heat1D.cc
